# simpleSTT

./: .gitignore  Cargo.toml  README.md  stt.ps1
.cargo/: config.toml
src/: audio.rs  config.rs  hotkey.rs  injector.rs  main.rs  overlay.rs  stt.rs
