[package]
name = "simplestt"
version = "0.1.0"
edition = "2021"
description = "Minimal speech-to-text overlay"

[features]
default = []
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]

[dependencies]
whisper-rs = { version = "0.16", features = ["openmp"] }
cpal = "0.15"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
simplelog = "0.12"
directories = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1
